Moyenne de buts marqués et encaissés par équipe

--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -710,6 +710,151 @@
    "source": [
     "buts_par_equipe.head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ba2495a",
+   "metadata": {},
+   "source": [
+    "### Moyenne de buts marqués et encaissés par équipe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "263d7843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moyenne_buts = run_query(\"\"\"\n",
+    "SELECT id_equipe,\n",
+    "       AVG(butsmarques) AS moyenne_buts_marques,\n",
+    "       AVG(butsconcedes) AS moyenne_buts_encaisses\n",
+    "FROM ResultatMatch\n",
+    "GROUP BY id_equipe\n",
+    "ORDER BY moyenne_buts_marques DESC;\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "314a6a82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_equipe</th>\n",
+       "      <th>moyenne_buts_marques</th>\n",
+       "      <th>moyenne_buts_encaisses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.196429</td>\n",
+       "      <td>0.982143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.105263</td>\n",
+       "      <td>1.035088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.263158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.931034</td>\n",
+       "      <td>0.896552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.844444</td>\n",
+       "      <td>1.466667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1.833333</td>\n",
+       "      <td>1.145833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>17</td>\n",
+       "      <td>1.750000</td>\n",
+       "      <td>1.483333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1.674419</td>\n",
+       "      <td>1.465116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1.650000</td>\n",
+       "      <td>1.383333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1.631579</td>\n",
+       "      <td>1.245614</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_equipe  moyenne_buts_marques  moyenne_buts_encaisses\n",
+       "0          1              2.196429                0.982143\n",
+       "1          4              2.105263                1.035088\n",
+       "2          3              2.000000                1.263158\n",
+       "3          2              1.931034                0.896552\n",
+       "4          8              1.844444                1.466667\n",
+       "5          5              1.833333                1.145833\n",
+       "6         17              1.750000                1.483333\n",
+       "7         10              1.674419                1.465116\n",
+       "8         15              1.650000                1.383333\n",
+       "9          6              1.631579                1.245614"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moyenne_buts.head(10)"
+   ]
   }
  ],
  "metadata": {
