--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -855,6 +855,144 @@
    "source": [
     "moyenne_buts.head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555702bb",
+   "metadata": {},
+   "source": [
+    "### Classement des équipes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6121cab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classement_equipes = run_query(\"\"\"\n",
+    "SELECT id_equipe, SUM(\n",
+    "    CASE \n",
+    "        WHEN resultat='W' THEN 3\n",
+    "        WHEN resultat='D' THEN 1\n",
+    "        ELSE 0\n",
+    "    END\n",
+    ") AS points\n",
+    "FROM ResultatMatch\n",
+    "GROUP BY id_equipe\n",
+    "ORDER BY points DESC\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "976496f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_equipe</th>\n",
+       "      <th>points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>17</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>15</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_equipe  points\n",
+       "0          1     123\n",
+       "1          4     114\n",
+       "2          2     113\n",
+       "3          6     106\n",
+       "4          3     101\n",
+       "5          5      91\n",
+       "6         17      86\n",
+       "7         15      86\n",
+       "8         12      80\n",
+       "9          8      77"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classement_equipes.head(10)"
+   ]
   }
  ],
  "metadata": {
