Équipes avec la meilleure défense

--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "323fb322",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
     "SELECT id_equipe, nationalite, COUNT(*) AS nb_joueurs\n",
     "FROM Joueur\n",
     "GROUP BY id_equipe, nationalite\n",
-    "ORDER BY id_equipe, nb_joueurs DESC;\n",
+    "ORDER BY id_equipe, nb_joueurs DESC\n",
     "\"\"\")"
    ]
   },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "71afed53",
    "metadata": {},
    "outputs": [],
@@ -598,7 +598,7 @@
     "SELECT id_equipe, SUM(butsmarques) AS total_buts\n",
     "FROM ResultatMatch\n",
     "GROUP BY id_equipe\n",
-    "ORDER BY total_buts DESC;\n",
+    "ORDER BY total_buts DESC\n",
     "\"\"\")"
    ]
   },
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "263d7843",
    "metadata": {},
    "outputs": [],
@@ -732,7 +732,7 @@
     "       AVG(butsconcedes) AS moyenne_buts_encaisses\n",
     "FROM ResultatMatch\n",
     "GROUP BY id_equipe\n",
-    "ORDER BY moyenne_buts_marques DESC;\n",
+    "ORDER BY moyenne_buts_marques DESC\n",
     "\"\"\")"
    ]
   },
@@ -992,6 +992,138 @@
    ],
    "source": [
     "classement_equipes.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "716e0100",
+   "metadata": {},
+   "source": [
+    "### Équipes avec la meilleure défense"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9583c3da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defense_equipes = run_query(\"\"\"\n",
+    "SELECT id_equipe, SUM(butsconcedes) AS buts_encaisses\n",
+    "FROM ResultatMatch\n",
+    "GROUP BY id_equipe\n",
+    "ORDER BY buts_encaisses ASC\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "ed451066",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_equipe</th>\n",
+       "      <th>buts_encaisses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>12</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>11</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_equipe  buts_encaisses\n",
+       "0         13              47\n",
+       "1          9              51\n",
+       "2          2              52\n",
+       "3          7              52\n",
+       "4          5              55\n",
+       "5          1              55\n",
+       "6         12              57\n",
+       "7          4              59\n",
+       "8         11              61\n",
+       "9         10              63"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "defense_equipes.head(10)"
    ]
   }
  ],
