meilleurs_buteurs_par_equipe

--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -1125,6 +1125,154 @@
    "source": [
     "defense_equipes.head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cee436ca",
+   "metadata": {},
+   "source": [
+    "### Meilleurs buteurs par équipe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "f0139f7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meilleurs_buteurs_par_equipe = run_query(\"\"\"\n",
+    "SELECT j.id_equipe, j.nomjoueur, s.buts\n",
+    "FROM StatistiqueJoueur s\n",
+    "JOIN Joueur j USING(id_joueur)\n",
+    "JOIN (\n",
+    "    SELECT id_equipe, MAX(s2.buts) AS max_buts\n",
+    "    FROM StatistiqueJoueur s2\n",
+    "    JOIN Joueur j2 USING(id_joueur)\n",
+    "    GROUP BY id_equipe\n",
+    ") AS m ON j.id_equipe = m.id_equipe AND s.buts = m.max_buts;\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "9b6f8ecc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_equipe</th>\n",
+       "      <th>nomjoueur</th>\n",
+       "      <th>buts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kai Havertz</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Erling Haaland</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Cole Palmer</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Alexander Isak</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Ollie Watkins</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Chris Wood</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Kaoru Mitoma</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Danny Welbeck</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8</td>\n",
+       "      <td>João Pedro</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_equipe       nomjoueur  buts\n",
+       "0          1   Mohamed Salah    29\n",
+       "1          2     Kai Havertz     9\n",
+       "2          3  Erling Haaland    22\n",
+       "3          4     Cole Palmer    15\n",
+       "4          5  Alexander Isak    23\n",
+       "5          6   Ollie Watkins    16\n",
+       "6          7      Chris Wood    20\n",
+       "7          8    Kaoru Mitoma    10\n",
+       "8          8   Danny Welbeck    10\n",
+       "9          8      João Pedro    10"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meilleurs_buteurs_par_equipe.head(10)"
+   ]
   }
  ],
  "metadata": {
