Export des analyses football vers CSV dans le dossier analyses_foot

--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -866,28 +866,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "c6121cab",
    "metadata": {},
    "outputs": [],
    "source": [
     "classement_equipes = run_query(\"\"\"\n",
-    "SELECT id_equipe, SUM(\n",
+    "SELECT e.nomequipe, r.id_equipe, SUM(\n",
     "    CASE \n",
-    "        WHEN resultat='W' THEN 3\n",
-    "        WHEN resultat='D' THEN 1\n",
+    "        WHEN r.resultat='W' THEN 3\n",
+    "        WHEN r.resultat='D' THEN 1\n",
     "        ELSE 0\n",
     "    END\n",
     ") AS points\n",
-    "FROM ResultatMatch\n",
-    "GROUP BY id_equipe\n",
+    "FROM ResultatMatch r\n",
+    "JOIN Equipe e ON r.id_equipe = e.id_equipe\n",
+    "GROUP BY r.id_equipe, e.nomequipe\n",
     "ORDER BY points DESC\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "id": "976496f7",
    "metadata": {},
    "outputs": [
@@ -912,6 +913,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>nomequipe</th>\n",
        "      <th>id_equipe</th>\n",
        "      <th>points</th>\n",
        "    </tr>\n",
@@ -919,51 +921,61 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Liverpool</td>\n",
        "      <td>1</td>\n",
        "      <td>123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Chelsea</td>\n",
        "      <td>4</td>\n",
        "      <td>114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Arsenal</td>\n",
        "      <td>2</td>\n",
        "      <td>113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Aston Villa</td>\n",
        "      <td>6</td>\n",
        "      <td>106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Manchester City</td>\n",
        "      <td>3</td>\n",
        "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>Newcastle Utd</td>\n",
        "      <td>5</td>\n",
        "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>17</td>\n",
-       "      <td>86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>Manchester Utd</td>\n",
        "      <td>15</td>\n",
        "      <td>86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Tottenham</td>\n",
+       "      <td>17</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>Crystal Palace</td>\n",
        "      <td>12</td>\n",
        "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>Brighton</td>\n",
        "      <td>8</td>\n",
        "      <td>77</td>\n",
        "    </tr>\n",
@@ -972,20 +984,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   id_equipe  points\n",
-       "0          1     123\n",
-       "1          4     114\n",
-       "2          2     113\n",
-       "3          6     106\n",
-       "4          3     101\n",
-       "5          5      91\n",
-       "6         17      86\n",
-       "7         15      86\n",
-       "8         12      80\n",
-       "9          8      77"
+       "         nomequipe  id_equipe  points\n",
+       "0        Liverpool          1     123\n",
+       "1          Chelsea          4     114\n",
+       "2          Arsenal          2     113\n",
+       "3      Aston Villa          6     106\n",
+       "4  Manchester City          3     101\n",
+       "5    Newcastle Utd          5      91\n",
+       "6   Manchester Utd         15      86\n",
+       "7        Tottenham         17      86\n",
+       "8   Crystal Palace         12      80\n",
+       "9         Brighton          8      77"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,6 +1416,33 @@
    ],
    "source": [
     "matchs_par_equipe.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fea0ce2",
+   "metadata": {},
+   "source": [
+    "### auvegarder tous les DataFrames SQL dans des fichiers CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a2ea3442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_buteurs.to_csv(\"../../data/analyses_foot/top_buteurs.csv\", index=False)\n",
+    "joueurs_decisifs.to_csv(\"../../data/analyses_foot/top_decisifs.csv\", index=False)\n",
+    "joueurs_disciplinés.to_csv(\"../../data/analyses_foot/joueurs_disciplinés.csv\", index=False)\n",
+    "nationalites_par_equipe.to_csv(\"../../data/analyses_foot/repartition_nationalites.csv\", index=False)\n",
+    "buts_par_equipe.to_csv(\"../../data/analyses_foot/buts_par_equipe.csv\", index=False)\n",
+    "moyenne_buts.to_csv(\"../../data/analyses_foot/moyenne_buts.csv\", index=False)\n",
+    "classement_equipes.to_csv(\"../../data/analyses_foot/classement_equipes.csv\", index=False)\n",
+    "defense_equipes.to_csv(\"../../data/analyses_foot/meilleure_defense.csv\", index=False)\n",
+    "meilleurs_buteurs_par_equipe.to_csv(\"../../data/analyses_foot/meilleurs_buteurs_par_equipe.csv\", index=False)\n",
+    "matchs_par_equipe.to_csv(\"../../data/analyses_foot/matchs_par_equipe.csv\", index=False)"
    ]
   }
  ],
